deps/crates/vendor/anyhow/tests/ui/chained-comparison.stderr
error: comparison operators cannot be chained
 --> tests/ui/chained-comparison.rs:6:19
  |
6 |     ensure!(false == false == true);
  |                   ^^       ^^
  |
help: split the comparison into two
  |
6 |     ensure!(false == false && false == true);
  |                            ++++++++
